# DragonQuest

./: DB_Init  README.md
DragonQuest/: CMakeLists.txt  backgroundcolor.cpp  backgroundcolor.h  battle.cpp  battle.h  bigtext.cpp  bigtext.h  cave.cpp  cave.h  character.cpp  character.h  databasehandler.cpp  databasehandler.h  format.cpp  format.h  format.h.gufDvD  hero.cpp  hero.h  magic.cpp  magic.h  main.cpp  monster.cpp  monster.h  terminal.cpp  terminal.h  textcolor.cpp  textcolor.h
SQL INIT/: SQL.sql
build-DragonQuest-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  DragonQuest  Makefile  cmake_install.cmake
build-DragonQuest-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-7bd6bf56a58179e834e1.json  cache-v2-95f05c0ac540b6b910a3.json  cmakeFiles-v1-ccd0b3d5cf6cd37e6724.json  cmakeFiles-v1-d87fe9225dc7d60a0419.json  codemodel-v2-d5d54feaa3ceb6b6fa46.json  codemodel-v2-e6ee2134e4f5f6b48420.json  index-2024-04-19T08-46-54-0853.json  index-2024-04-25T19-11-24-0195.json  target-DragonQuest-Debug-be5aad6bce5a6e3d13c9.json  target-DragonQuest-Debug-c880f2a49cb947ee63bd.json
build-DragonQuest-Desktop-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-c698f4e1b3e3d659b74b.json  codemodel-v2-05881a1fd66378fdddeb.json  codemodel-v2-cee814eab6f1434fe82f.json  index-2024-04-19T08-31-22-0543.json  index-2024-04-25T19-07-40-0433.json  target-DragonQuest-Debug-2d5d2b8ba9569f696891.json  target-DragonQuest-Debug-c7b2e9f221ae00d2e4fc.json  target-DragonQuest_autogen-Debug-c791574e69b1fbfdf055.json
